--- a/src/assets/scss/mixins.scss
+++ b/src/assets/scss/mixins.scss
@@ -1,3 +1,21 @@
-@mixin test() {
-  background: yellow;
-}
+$primary: rgba(1, 150, 123, 0.30);
+$primary-text: rgba(0, 0, 0, .86);
+$links: rgba(1, 150, 123, 1);
+$accent: adjust-color($primary, $hue: 120deg);
+$accent-text: adjust-color($accent, $alpha: 1);
+$headers: adjust-color($accent, $alpha: 1);
+
+$primary-alt: adjust-color($primary, $hue: 120deg);
+$primary-text-alt: rgba(0, 0, 0, .86);
+$links-alt: adjust-color($primary, $hue: 240deg, $lightness: 10%, $alpha: 1);
+$accent-alt: $primary;
+$accent-text-alt: rgba(250, 250, 250, .86);
+$headers-alt: adjust-color($primary, $hue: 240deg, $lightness: 10%, $alpha: 1);
+
+$padding: 2ex 2ch;
+$border-radius: 25px;
+$border-color: #e6e6e6;
+
+$box-shadow: 1px 1px 2px 1px rgba(1, 150, 123, 0.30);
+$small: 690px;
+$medium: 955px;
